ignore last data point if it's early in the month and toggle
adds a toggle for not showing the last data point in the series if the period the data is reported from is incomplete. this is toggled on by default for days of the month before the 10th.

move javascript for trends page to separate script file which is minified to reduce response size.

--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <label for="search" style="margin-top: 25px;">Enter a search term:</label>
     <input name="id" type="text" required id="search" />
     <button type="submit">Search</button>
-    <label for="allwords" id="allwords-label" title="For a search containing multiple words the story must contain all words.">
+    <label for="allwords" class="setting-checkbox-label" id="allwords-label" title="For a search containing multiple words the story must contain all words.">
         Search result must match all words: 
         <input type="checkbox" name="allwords" id="allwords" value="true" checked />
     </label>
