--- a/src/HnTrends/Views/Home/Trend.cshtml
+++ b/src/HnTrends/Views/Home/Trend.cshtml
@@ -28,21 +28,21 @@ else
 
     <button type="button" id="percent" onclick="togglePercent()">Display as % of stories</button>
 
+    <label for="skiplast" id="skiplastlabel" class="setting-checkbox-label" title="Do not show data for incomplete period (month, week, etc).">
+        Ignore incomplete period:
+        <input type="checkbox" name="skiplast" id="skiplast" value="true" />
+    </label>
+
     <div id="plot"></div>
-
-    <div id="skip-last-container" class="u-pull-left">
-        <label for="skiplast" class="setting-checkbox-label" title="Do not show data for incomplete period (month, week, etc).">
-            Ignore incomplete period:
-            <input type="checkbox" name="skiplast" id="skiplast" value="true" />
-        </label>
-    </div>
-
-    <div id="add-term-container" class="u-pull-right">
-        <input name="text" type="text" id="text" title="Add another search term to compare trends" />
+    
+    <div id="add-term-container">
+        <label for="text">Add another trend:</label>
+        <input name="text" type="text" id="text" title="Add another search term to compare trends"/>
         <button id="add-term" type="button" title="Add this search term to the plot">Add</button>
+        <span id="loading" style="display: none">Loading...</span>
         <label for="allwords" class="setting-checkbox-label" id="allwords-label" title="Title must contain all words.">
             Search result must match all words:
-            <input type="checkbox" name="allwords" id="allwords" value="true" checked />
+            <input type="checkbox" name="allwords" id="allwords" value="true" checked/>
         </label>
     </div>
 }
