remove old solution, add bitcoin trend, minify with actions v012

--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -29,6 +29,7 @@
         <li><a asp-action="Trend" asp-route-id="OpenAI">OpenAI</a></li>
         <li><a asp-action="Trend" asp-route-id="PyTorch">PyTorch</a></li>
         <li><a asp-action="Trend" asp-route-id="Laravel">Laravel</a></li>
+        <li><a asp-action="Trend" asp-route-id="Bitcoin">Bitcoin</a></li>
     </ul>
 </p>
 
