--- a/src/HnTrends/Views/Home/Trend.cshtml
+++ b/src/HnTrends/Views/Home/Trend.cshtml
@@ -45,6 +45,15 @@ else
             <input type="checkbox" name="allwords" id="allwords" value="true" checked/>
         </label>
     </div>
+
+    <div id="terms-list">
+        <p>View raw data for your terms:</p>
+        <ul>
+            <li>
+                <a href="/api/results/@Model.Term" target="_blank">@Model.Term</a>
+            </li>
+        </ul>
+    </div>
 }
 
 
