--- a/src/HnTrends/wwwroot/css/site.css
+++ b/src/HnTrends/wwwroot/css/site.css
@@ -77,3 +77,100 @@ p {
     margin-left: 20px;
     color: #AAA;
 }
+
+#wrapper {
+    position: relative;
+}
+
+#background {
+    background: #0984e3;
+    height: 65vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#normal {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
+}
+
+#form-container {
+    width: 50vw;
+    background: white;
+    min-width: 600px;
+    border: 2px solid #FEFEFE;
+    box-shadow: 0 1px 1px rgb(200, 200, 200), 0 2px 2px rgb(220, 220, 220), 0 4px 4px rgb(240, 240, 240);
+    padding: 20px;
+}
+
+@media all and (max-width: 600px) {
+    #form-container {
+        width: 100%;
+        min-width: initial;
+    }
+}
+
+#form-container > h3 {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+    color: #444;
+    letter-spacing: 0.05rem;
+    margin-bottom: 40px;
+}
+
+#the-form {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+    #the-form > button {
+        width: 200px;
+        margin-top: 15px;
+    }
+
+#search {
+    background: #EFEFEF;
+    width: 90%;
+    border-radius: 4px;
+    border: none;
+    padding: 10px;
+    height: 50px;
+    font-size: 2rem;
+    margin: auto;
+    color: #666;
+}
+
+.front-p {
+    text-align: center;
+    color: #666;
+    font-weight: lighter;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2.5rem;
+    margin-bottom: 5px;
+    font-size: 1.5rem;
+    letter-spacing: 0.05rem;
+}
+
+#suggestion-list {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+    #suggestion-list > li {
+        display: inline-block;
+        margin-right: 10px;
+        opacity: 0.8;
+    }
