add ability to see sum of story score for terms

--- a/src/HnTrends/Views/Home/Trend.cshtml
+++ b/src/HnTrends/Views/Home/Trend.cshtml
@@ -27,7 +27,7 @@ else
         </select>
     </label>
 
-    <button type="button" id="percent" onclick="togglePercent()">Display as % of stories</button>
+    <button type="button" id="percent" onclick="switchTrendType()">Display as % of stories</button>
 
     <label for="skiplast" id="skiplastlabel" class="setting-checkbox-label" title="Do not show data for incomplete period (month, week, etc).">
         Ignore incomplete period:
