--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -35,6 +35,9 @@
         <li><a asp-action="Trend" asp-route-id="Laravel">Laravel</a></li>
         <li><a asp-action="Trend" asp-route-id="Bitcoin">Bitcoin</a></li>
     </ul>
+    <p style="margin-top: 20px; color: #999; text-align: center; font-size: 11px">
+        Find the source on <a href="https://github.com/EliotJones/HnTrends" target="_blank">GitHub</a>
+    </p>
 </p>
         </div>
     </div>
