--- a/src/HnTrends/Views/Home/Trend.cshtml
+++ b/src/HnTrends/Views/Home/Trend.cshtml
@@ -14,23 +14,30 @@ else
 {
     <h3>Data for '@Model.Term'</h3>
     <div class="remark">Search term is case insensitive.</div>
-    <p>This shows the count of stories posted to Hacker News featuring the search term in the title by <span id="period">Day</span>.</p>
-    <p>The data is not updated in real time. Currently the data runs between <em>@Model.From.ToShortDateString()</em> and <em>@Model.To.ToShortDateString()</em>.</p>
+    <p>This shows the count of stories posted to Hacker News featuring the search term in the title by <span
+        id="period">Day</span>.</p>
+    <p>The data is not updated in real time. Currently the data runs between <em>@Model.From.ToShortDateString()</em> and
+        <em>@Model.To.ToShortDateString()</em>.
+    </p>
 
     <input id="data-load" type="hidden" asp-for="Data" />
 
     <label for="period-selector" style="display: inline-block; margin-right: 25px;">
         Group Data By:
-        <select id="period-selector" onchange="periodSelectorChanged()" style="width: 200px; margin-left: 25px; height: 36px;">
+        <select id="period-selector" onchange="periodSelectorChanged()"
+        style="width: 200px; margin-left: 25px; height: 36px;">
             <option label="Day">Day</option>
             <option label="Week">Week</option>
             <option label="Month" selected>Month</option>
         </select>
     </label>
 
+    <button type="button" class="my-button"></button>
+
     <button type="button" id="percent" onclick="switchTrendType()">Display as % of stories</button>
 
-    <label for="skiplast" id="skiplastlabel" class="setting-checkbox-label" title="Do not show data for incomplete period (month, week, etc).">
+    <label for="skiplast" id="skiplastlabel" class="setting-checkbox-label"
+    title="Do not show data for incomplete period (month, week, etc).">
         Ignore incomplete period:
         <input type="checkbox" name="skiplast" id="skiplast" value="true" />
     </label>
@@ -52,7 +59,8 @@ else
         <p>View raw data for your terms:</p>
         <ul id="terms-list-list">
             <li>
-                <a href="/api/results/@WebUtility.UrlEncode(Model.Term)?allWords=@Model.AllWords" target="_blank">@Model.Term</a>
+                <a href="/api/results/@WebUtility.UrlEncode(Model.Term)?allWords=@Model.AllWords"
+                target="_blank">@Model.Term</a>
             </li>
         </ul>
     </div>
@@ -60,17 +68,19 @@ else
 
 <div id="modal-wrapper" style="position: fixed; left: 0; width: 100%; height: 100%; top: 0; display: none">
     <div id="modal-inner" style="position: relative; width: 100%; height: 100%; padding-top: 20vh">
-        <div id="modal-background" style="position: absolute; left: 0; width: 100%; height: 100%; top: 0; opacity: 0.3; background: #525252"></div>
-        <div id="modal" 
-             style="background: white; width: 80%; height: 700px; position: relative; margin-left: auto; margin-right: auto; box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); padding: 20px; overflow: auto; display: flex; justify-content: center">
+        <div id="modal-background"
+            style="position: absolute; left: 0; width: 100%; height: 100%; top: 0; opacity: 0.3; background: #525252">
+        </div>
+        <div id="modal"
+            style="background: white; width: 80%; height: 700px; position: relative; margin-left: auto; margin-right: auto; box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); padding: 20px; overflow: auto; display: flex; justify-content: center">
             <table style="display: table">
                 <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Score</th>
-                    <th>Date</th>
-                </tr>
+                    <tr>
+                        <th>Id</th>
+                        <th>Title</th>
+                        <th>Score</th>
+                        <th>Date</th>
+                    </tr>
                 </thead>
                 <tbody id="modal-table-body">
 
@@ -82,5 +92,6 @@ else
 
 
 @section Scripts {
-    <script src="~/js/trends.min.js" asp-append-version="true"></script>
+<script src="~/js/trends.min.js" asp-append-version="true"></script>
+<script src="~/js/bundle.js" asp-append-version="true"></script>
 }
